--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <canvas id="gameCanvas"></canvas>
         <div id="score">Score: 0</div>
         <button id="startBtn">Start</button>
+        <div id="gameOver" class="hidden">Game Over</div>
     </div>
     <script src="main.js"></script>
 </body>
